保存本地的index

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
         <link href="./style.css">
     </header>
     <body>
-        
+        <ul>
+            <li>
+                <span>log</span>
+            </li>
+            <li>
+                <span>reset</span>
+            </li>
+        </ul>
     </body>
 </html>
