--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
             <li>
                 <span>reset</span>
             </li>
+            <li>
+                <span>checkout</span>
+            </li>
         </ul>
     </body>
 </html>
